# MailToolsBox

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
MailToolsBox/: __init__.py  _version.py  exceptions.py  imapClient.py  mailSender.py  retry.py  security.py
MailToolsBox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MailToolsBox/templates/: example.html
tests/: test_imap_agent.py  test_integration_smtp.py  test_mail_sender.py  test_retry.py  test_session.py
